refactor: Reservation과 Waiting을 통합 및 DB 스키마 수정
- waiting 테이블 제거
- date/time_id/theme_id을 묶어 slot 테이블로 분리
- reservation 테이블에 status(CONFIRMED/WAITING), created_at 컬럼 추가
- reservation_time.start_at 타입 VARCHAR → TIME 변경, UNIQUE 추가
- theme.name, reservation.name 길이 제한 VARCHAR(20) 적용
- DTO suffix 'DTO' 제거로 네이밍 일관성 확보